--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="./src/assets/favicon.avif" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="CodeAntAI - Discover innovative solutions for AI and coding enthusiasts. Created by Kshitij Singh Bisht">
+    <meta name="description" content="AI code reviewer that helps you find and fix critical code quality issues and security vulnerabilities in 30+ languages. Start your 7-day free trial today!">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CodeAnt AI">
+    <meta property="og:description" content="AI code reviewer that helps you find and fix critical code quality issues and security vulnerabilities in 30+ languages. Start your 7-day free trial today!">
+    <meta property="og:image" content="https://framerusercontent.com/assets/D2BdJiZA43PJ2u2ovYMkwTYeQL4.png">
+    <!-- Author -->
+    <meta name="author" content="Kshitij Singh Bisht" />
+    <!-- Title -->
+    <title>CodeAnt AI</title>
   </head>
   <body>
     <div id="root"></div>
